# presto

./: .gitignore  pom.xml
.github/workflows/: prestocpp-linux-build-and-unit-test.yml
presto-docs/src/main/sphinx/presto_cpp/plugin/: function_plugin.rst
presto-native-execution/: CMakeLists.txt  Makefile  pom.xml
presto-native-execution/presto_cpp/main/: CMakeLists.txt  JsonSignatureParser.h  PrestoServer.cpp  PrestoServer.h  RemoteFunctionRegisterer.cpp
presto-native-execution/presto_cpp/main/common/: Configs.cpp  Configs.h
presto-native-execution/presto_cpp/main/common/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/main/dynamic_registry/: CMakeLists.txt  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h
presto-native-execution/presto_cpp/main/dynamic_registry/examples/: CMakeLists.txt  CustomAddDynamic.cpp  DynamicArrayFunction.cpp  DynamicFunction.cpp  DynamicVarcharFunction.cpp
presto-native-execution/presto_cpp/main/functions/: CMakeLists.txt  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  README.md
presto-native-execution/presto_cpp/main/functions/tests/: CMakeLists.txt  DynamicLinkTest.cpp  MyDynamicTestFunction.cpp
presto-native-execution/presto_cpp/main/operators/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/main/tests/: CMakeLists.txt  DynamicFunctionRegistererTest.cpp  JsonSignatureParserTest.cpp
presto-native-execution/presto_cpp/main/types/tests/: CMakeLists.txt
presto-native-execution/src/test/java/com/facebook/presto/nativeworker/: ContainerNativeQueryRunnerWithSidecar.java  ContainerNativeQueryRunnerWithSidecarUtils.java  ContainerQueryRunner.java  ContainerQueryRunnerUtils.java  HiveExternalWorkerQueryRunner.java  PrestoNativeQueryRunnerUtils.java  TestPrestoContainerBasicQueries.java  TestPrestoNativeDynamicLibrary.java
presto-native-execution/src/test/resources/: dynamic_function_config.json
presto-native-execution/testcontainers/: README.md
presto-native-execution/testcontainers/nativeworker/velox-etc/: config.properties
presto-native-execution/testcontainers/util/: dynamic_function_config.json
presto-native-sidecar-plugin/src/test/java/com/facebook/presto/sidecar/: TestPrestoNativeDynamicLibrary.java
presto-native-tests/src/test/java/com/facebook/presto/nativetests/: TestDynamicFunctions.java
presto-native-tests/src/test/resources/: README.md
presto-native-tests/src/test/resources/plugin/: libadd_function_dynamic.dylib
(+3 files in other folders)
